compiler/tests/success/subroutines/spill.jazz
param int n = 12;

fn gosub(reg u64 a) -> reg u64 {
reg u64[n] tab;
reg u64 k;
inline int i;

k = #set0();
for i = 0 to n { tab[i] = a; }
for i = 0 to n { k += tab[i]; }

return k;
}

export
fn main(reg u64 x) -> reg u64 {
reg u64 t r;
r = x;
t = gosub(x);
r += t;
return r;
}